# RenderAndCompare

./: .gitignore  CMakeLists.txt  README.md
RenderAndCompare/: ArticulatedObjectsDataLayer.cpp  ArticulatedObjectsDataLayer.h  CMakeLists.txt  CudaHelper.h  Dataset.cpp  Dataset.h  EigenTypedefs.h  H5EigenBase.h  H5EigenDense.h  H5EigenSparse.h  H5EigenTensor.h  H5StdContainers.cpp  H5StdContainers.h  ImageDataset.cpp  ImageDataset.h  ImageLoaders.cpp  ImageLoaders.h  ImageUtils.cpp  ImageUtils.h  NumericDiff.cu  NumericDiff.h  SMPLMeshRenderer.cpp  SMPLMeshRenderer.h  SMPLRenderLayer.cpp  SMPLRenderLayer.cu  SMPLRenderLayer.h  SMPLRenderWithLossLayer.cpp  SMPLRenderWithLossLayer.h  SMPLmodel-impl.hpp  SMPLmodel.cpp  SMPLmodel.h  SegmAccuracyLayer.cpp  SegmAccuracyLayer.cu  SegmAccuracyLayer.h  SegmentationAccuracy.cpp  SegmentationAccuracy.cu  SegmentationAccuracy.h  __init__.py  render_layer.cpp  render_layer.hpp
RenderAndCompare/datasets/: __init__.py  annotation_loaders.py  annotation_parser.py  datalayer.py  datasets.py  image_loaders.py  kitti_helper.py  viewpoint_pred_layers.py
RenderAndCompare/datasets/test/: _init_paths.py
RenderAndCompare/geometry/: __init__.py  boundingbox.py  viewpoint_metrics.py
RenderAndCompare/layers/: __init__.py  articulated_object_layers.py  crop_pred_layers.py  datalayer.py  function_layers.py  shape_pred_layers.py  viewpoint_pred_layers.py
RenderAndCompare/layers/test/: AngleExpectationLayer.prototxt  AngularExpectation.ipynb  SoftMaxWithTemperatureLayer.ipynb  SoftMaxWithTemperatureLayer_Caffe.ipynb  SoftmaxWithTemperature.prototxt  SoftmaxWithTemperature_Caffe.prototxt  TestSmoothL1Loss.ipynb  _init_paths.py  articulated_object_layers.prototxt  crop_pred.prototxt  grad_check.ipynb  model_render.prototxt  shape_pred.prototxt  test_crop_pred_layers.py  test_gradient_for_python_layer.py  test_py_layer.prototxt  test_shape_pred_layers.py  test_smoothL1_layer.prototxt  test_viwpoint_expecation_layer.prototxt
RenderAndCompare/prediction/: __init__.py  prediction_helper.py
cmake/: CompileSettings.cmake  CudaHelper.cmake
data/: dataset_playground.ipynb
data/generate_bkg_images/: copy_and_resize_cityscapes_images.py  copy_voc_images_having_cars.py
data/kitti/: .gitignore  visualize_KITTI_boxes.py
data/kitti/cpp_evaluate/: evaluate_kitti_object.cpp
data/ms_coco/: generate_coco_background_images.py
data/pascal3D/: .gitignore  browse_annotations.m  browse_pascal3d_annotations.py  create_pascal3d_imagenet_splits.py  find_pascal3d_scale.m  fix_annotations.m  import_pascal3d_annotations.py  jitter_imcrop.m  make_pascal3d_testing_data.m  make_pascal3d_training_data.m  prepare_imagenet_imgs.m  prepare_voc12_imgs.m  render3Dpoints.m  show_cad_overlay.m
data/pascal3D/evaluate/: _init_paths.py  combine_bbox_view.m  compute_recall_precision_accuracy_azimuth.m  evaluate_avp_nv_on_pascal3d.py  extract_records.m  global_variables.m  make_dets_and_pred_view_from_json.py  test_det.m
data/render4cnn/: .gitignore  prepare_training_data.py
experiments/articulated_object/resnet50_shape10L1_pose10L1/: deploy.prototxt
experiments/articulated_object/resnet50_shape10L1_pose10L1_cpp/: train.prototxt
experiments/articulated_object/resnet50_shape10L1_pose36L1/: deploy.prototxt  solver.prototxt  solver_2ndstage.prototxt  train.prototxt  train_2ndStage.prototxt
experiments/articulated_object/resnet50_shape10L1_pose69L1/: deploy.prototxt  solver.prototxt  solver_2nd_stage.prototxt  train.prototxt  train_2nd_stage.prototxt
experiments/articulated_object/resnet50_shape10L1_pose69L1_IoU/: solver.prototxt  solver_stage1.prototxt  solver_stage2.prototxt  train.prototxt  train_stage1.prototxt  train_stage2.prototxt
experiments/viewpoint_prediction/: .gitignore  predict_viewpoint_on_imagelist.py
lib/datasets/: image_loaders.py  viewpoint_pred_layers.py
python/RenderAndCompare/: __init__.py
python/playground/: BoundingBox.ipynb  Dataset.ipynb  NetSurgery.ipynb  RoICamera.ipynb
python/tools/: _init_paths.py  analyze_kitti_results.py  analyze_results.py  compute_articlated_dataset_stats.py  compute_training_data_statistics.py  create_dataset_from_kitti.py  create_dataset_from_kitti_groundtruth.py  create_dataset_from_pascal3d.py  create_dataset_from_surreal_data.py  evaluate_fastrcnn_style_net.py  evaluate_rcnn_style_net.py  import_annotations.py  parse_and_plot_log.py  predict_articulated_objects.py  predict_joint_on_kitti.py  predict_vp_on_imagelist.py  predict_vp_on_kitti.py  predict_vp_on_pascal3d_val_easy.py  split_image_dataset_by_category.py  test_fastrcnn_style_net.py  test_rcnn_style_net.py  test_single_gpu.py  time_network.py  train_multi_gpu.py  train_single_gpu.py  update_dataset_with_shape_params.py  visualize_and_compare_results_2d.py  visualize_annotations.py  visualize_articulate_annotations.py  visualize_dataset_2d.py  visualize_detection_results.py  visualize_image_dataset.py  visualize_kitti_groundtruth.py  visualize_kitti_results.py  visualize_results.py
tools/: CMakeLists.txt  SegmentationBenchmark.cpp  SegmentationBenchmark.cu  SegmentationBenchmark.h  _init_paths.py  analyze_kitti_results.py  benchmark_network.cpp  benchmark_segmentation_accuracy.cpp  check_cpp_data_layer.cpp  check_network_model.cpp  check_render_layer_diff.cpp  check_smpl_render_layer.cpp  compute_articlated_dataset_stats.py  compute_training_data_statistics.py  create_dataset_from_kitti.py  create_dataset_from_kitti_groundtruth.py  create_dataset_from_surreal_data.py  demo_compute_iou.cpp  demo_image_loaders.cpp  device_query.cpp  evaluate_accuracy.py  evaluate_bodyparts_segmentation.cpp  evaluate_kitti_ap_and_aos.py  evaluate_kitti_object.cpp  evaluate_vp_on_pascal3d_val_easy.py  import_annotations.py  import_dets_from_pkl.py  parse_and_plot_log.py  predict_accuracy.py  predict_articulated_objects.py  predict_joint_on_kitti.py  predict_vp_on_imagelist.py  predict_vp_on_kitti.py  predict_vp_on_pascal3d_val_easy.py  render_articulated_objects.cpp  time_network.py  train.py  train_multi_gpu.py  train_network.cpp  train_single_gpu.py  (+10 more)
(+302 files in other folders)
