# setting a common place to put all executable files
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})

add_executable(device_query device_query.cpp)
target_link_libraries(device_query RenderAndCompare)

add_executable(visualize_dataset visualize_dataset.cpp)
target_link_libraries(visualize_dataset RenderAndCompare)

add_executable(visualize_image_dataset visualize_image_dataset.cpp)
target_link_libraries(visualize_image_dataset RenderAndCompare)

add_executable(check_cpp_data_layer check_cpp_data_layer.cpp)
target_link_libraries(check_cpp_data_layer RenderAndCompare)

add_executable(check_network_model check_network_model.cpp)
target_link_libraries(check_network_model RenderAndCompare)

add_executable(demo_image_loaders demo_image_loaders.cpp)
target_link_libraries(demo_image_loaders RenderAndCompare)

add_executable(train_network train_network.cpp)
target_link_libraries(train_network RenderAndCompare)

add_executable(benchmark_network benchmark_network.cpp)
target_link_libraries(benchmark_network RenderAndCompare)

add_executable(render_articulated_objects render_articulated_objects.cpp)
target_link_libraries(render_articulated_objects RenderAndCompare)

add_executable(evaluate_bodyparts_segmentation evaluate_bodyparts_segmentation.cpp)
target_link_libraries(evaluate_bodyparts_segmentation RenderAndCompare)

add_executable(check_smpl_render_layer check_smpl_render_layer.cpp)
target_link_libraries(check_smpl_render_layer RenderAndCompare)

add_executable(check_render_layer_diff check_render_layer_diff.cpp)
target_link_libraries(check_render_layer_diff RenderAndCompare)

add_executable(visualize_smpl_loss_map visualize_smpl_loss_map.cpp)
target_link_libraries(visualize_smpl_loss_map RenderAndCompare)

cuda_include_directories(
  ${EIGEN_INCLUDE_DIRS}
  ${Caffe_INCLUDE_DIRS}
  ${CUTEGL_INCLUDE_DIRS}
  )

cuda_add_executable(benchmark_segmentation_accuracy benchmark_segmentation_accuracy.cpp SegmentationBenchmark.cu SegmentationBenchmark.cpp)
target_link_libraries(benchmark_segmentation_accuracy RenderAndCompare)
